--- a/public/pending.html
+++ b/public/pending.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja de Estudo - Mercado Pago</title>
+    <title>Pagamento Pendente</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,17 +13,15 @@
 
     <main>
         <div class="product-card">
-            <h2>Produto de Teste #1</h2>
-            <p class="price">R$ 10,50</p>
-            <p>Este é um produto fictício para testar a integração com a API do Mercado Pago.</p>
-            <button id="buyButton">Comprar Agora</button>
+            <h2>Pagamento Pendente ⏳</h2>
+            <p>Seu pagamento está aguardando confirmação. Assim que for aprovado, você receberá uma notificação.</p>
+            <p>Isso pode acontecer com pagamentos via boleto ou em algumas situações de Pix.</p>
+            <a href="/" class="button-link">Voltar à Loja</a>
         </div>
     </main>
 
     <footer>
         <p>&copy; 2025 Loja de Estudo. Todos os direitos reservados.</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
